v0.6.1 (2010-xx-xx)
  * Minor internal improvements and clean ups.

  * New commands available in the Redis v2.2 profile (dev):
      - Misc.  : WATCH, UNWATCH

  * Optional modifiers for ZRANGE, ZREVRANGE and ZRANGEBYSCORE queries are 
    supported using an associative array passed as the last argument of their 
    respective methods.

  * Added missing support for the LIMIT modifier of ZRANGEBYSCORE.

  * The method Predis\Client::__construct() now accepts also instances of 
    Predis\ConnectionParameters.

  * Predis\MultiExecBlock and Predis\PubSubContext now throw an exception 
    when trying to create their instances using a profile that does not 
    support the required Redis commands or when the client is connected to 
    a cluster of connections.

  * Various improvements to Predis\MultiExecBlock:
      - fixes and more consistent behaviour across various usage cases.
      - support for WATCH and UNWATCH when using the current development 
        profile (Redis v2.2) and aborted transactions.

  * New signature for Predis\Client::multiExec() which is now able to accept 
    an array of options for the underlying instance of Predis\MultiExecBlock. 
    Backwards compatibility with previous releases of Predis is ensured.

  * New signature for Predis\Client::pipeline() which is now able to accept 
    an array of options for the underlying instance of Predis\CommandPipeline. 
    Backwards compatibility with previous releases of Predis is ensured. 
    The method Predis\Client::pipelineSafe() is to be considered deprecated.

v0.6.0 (2010-05-24)
  * Switched to the new multi-bulk request protocol for all of the commands 
    in the Redis 1.2 and Redis 2.0 profiles. Inline and bulk requests are now 
    deprecated as they will be removed in future releases of Redis.

  * The default server profile is "2.0" (targeting Redis 2.0.x). If you are 
    using older versions of Redis, it is highly recommended that you specify 